package com.xinqihd.sns.gameserver.proto;
//请求商品列表
option java_outer_classname = "XinqiBceGuildBagEvent"; 

message BceGuildBagEvent {
    optional string guildID = 1;     //ID 
}
